EDSC-4421: Fixing styling discrepancies from bootstrap upgrade  (#1870)
* EDSC-4421 Fixing Facet text cutoff

* EDSC-4421 Fixing additional filters text wrapping

* EDSC-4421 Fixing shapefile 'x' button. Aligning subscription action buttons

* EDSC-4421 Fixing test

* EDSC-4421 Adjusting modal header

* EDSC-4421 Simplifying css fixes

* EDSC-4421 PR feedback

* EDSC-4421 simplifying css fix

--- a/static/src/js/components/Facets/FacetsItem.scss
+++ b/static/src/js/components/Facets/FacetsItem.scss
@@ -52,6 +52,7 @@
     display: flex;
     align-items: center;
     flex: 1;
+    overflow: hidden;
   }
 
   &__title {
