--- a/static/src/js/components/SubscriptionsList/SubscriptionsListTable.scss
+++ b/static/src/js/components/SubscriptionsList/SubscriptionsListTable.scss
@@ -13,6 +13,12 @@
 
   &__actions {
     text-align: center;
+    
+    .actions-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__name,
